--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.1
   easy_localization: ^3.0.7+1
+  hugeicons: ^0.0.11
 
 dev_dependencies:
   flutter_test:
