--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.15.1
   easy_localization: ^3.0.7+1
   hugeicons: ^0.0.11
+  smooth_corner: ^1.1.1
 
 dev_dependencies:
   flutter_test:
