--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hugeicons: ^0.0.11
   firebase_auth: ^5.6.2
   smooth_corner: ^1.1.1
+  cloud_firestore: ^5.6.11
 
 dev_dependencies:
   flutter_test:
